--- a/src/components/AsideFilter/AsideFilter.module.css
+++ b/src/components/AsideFilter/AsideFilter.module.css
@@ -1,17 +1,28 @@
 .left-container {
   width: 360px;
+  flex-shrink: 0;
 }
 
 .filter-form {
   display: flex;
   flex-direction: column;
-  gap: 34px;
+  justify-content: start;
+  align-items: start;
+}
+
+.filter-form span {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.25;
+  color: var(--main);
 }
 
 .checkbox-container {
+  width: 100%;
   display: flex;
   flex-wrap: wrap;
   gap: 10px;
+  margin-bottom: 32px;
 }
 
 .checkbox-item-container {
@@ -20,7 +31,6 @@
   flex-direction: column;
   align-items: center;
   gap: 8px;
-
   border: 1px solid var(--label);
   border-radius: 10px;
   padding-top: 18px;
@@ -42,9 +52,11 @@
   width: 100%;
   height: 1px;
   background-color: var(--decor);
+  margin: 24px 0;
 }
 
 .radio-btn-container {
+  width: 100%;
   display: flex;
   flex-wrap: wrap;
   gap: 10px;
@@ -54,17 +66,18 @@
   width: calc((100% - 20px) / 3);
   display: flex;
   flex-direction: column;
-  align-items: center;
   gap: 8px;
   border: 1px solid var(--label);
   border-radius: 10px;
   padding-top: 10px;
   padding-bottom: 10px;
   text-align: center;
+  align-items: center;
+  justify-content: center;
 }
 
 .radio-btn-container input {
-  /* display: none; */
+  display: none;
 }
 
 .radio-btn-container svg {
@@ -72,4 +85,26 @@
   height: 28px;
   stroke: var(--main);
   fill: var(--main);
+}
+
+.btn-container {
+  display: flex;
+  justify-content: start;
+  margin-top: 64px;
+}
+
+.element-name {
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 1.2;
+  color: var(--main);
+}
+
+.filter-name {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  color: var(--text);
+  margin-top: 34px;
+  margin-bottom: 14px;
 }
