--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -1,14 +1,19 @@
 :root {
   --main: #101828;
   --button: #e44848;
+  --button-active: #d84343;
+  --button-transparent: rgba(71, 84, 103, 0.2);
   --inputs: #f7f7f7;
   --block-feature: #f2f4f7;
   --rating: #ffc531;
   --text: #475467;
   --label: rgba(16, 24, 40, 0.6);
   --decor: rgba(16, 24, 40, 0.1);
+  --white: #fff;
 
-  --main-container: 902px;
+  --transition-type: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  --main-container: 1312px;
 
   --main-font: "Inter", sans-serif;
 }
