--- a/src/components/FilterForm/FilterForm.module.css
+++ b/src/components/FilterForm/FilterForm.module.css
@@ -1,8 +1,3 @@
-.left-container {
-  width: 360px;
-  flex-shrink: 0;
-}
-
 .filter-form {
   display: flex;
   flex-direction: column;
@@ -35,10 +30,15 @@
   border-radius: 10px;
   padding-top: 18px;
   padding-bottom: 18px;
+  transition: border-color var(--transition-type);
 }
 
 .checkbox-item-container input {
   display: none;
+}
+
+.checkbox-item-container:has(input:checked) {
+  border-color: var(--button-active);
 }
 
 .checkbox-item-container svg {
@@ -55,14 +55,14 @@
   margin: 24px 0;
 }
 
-.radio-btn-container {
+.checkbox-type-btn-container {
   width: 100%;
   display: flex;
   flex-wrap: wrap;
   gap: 10px;
 }
 
-.radio-btn-item-container {
+.checkbox-type-btn-item-container {
   width: calc((100% - 20px) / 3);
   display: flex;
   flex-direction: column;
@@ -76,11 +76,15 @@
   justify-content: center;
 }
 
-.radio-btn-container input {
+.checkbox-type-btn-container input {
   display: none;
 }
 
-.radio-btn-container svg {
+.checkbox-type-btn-item-container:has(input:checked) {
+  border-color: var(--button-active);
+}
+
+.checkbox-type-btn-container svg {
   width: 40px;
   height: 28px;
   stroke: var(--main);
