--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -1,4 +1,4 @@
-.btn-search {
+.search {
   border-radius: 200px;
   padding: 16px 60px;
   background: var(--button);
@@ -10,12 +10,11 @@
   transition: background var(--transition-type);
 }
 
-.btn-search:hover,
-.btn-search:focus {
+.search:hover,
+.search:focus {
   background: var(--button-active);
 }
-
-.btn-show {
+.show {
   border-radius: 200px;
   padding: 16px 40px;
   background: var(--button);
@@ -26,13 +25,12 @@
   color: var(--white);
   transition: background var(--transition-type);
 }
-
-.btn-show:hover,
-.btn-show:focus {
+.show:hover,
+.show:focus {
   background: var(--button-active);
 }
 
-.btn-transparent {
+.transparent {
   background: transparent;
   border: 1px solid var(--button-transparent);
   border-radius: 200px;
@@ -45,27 +43,46 @@
   transition: background var(--transition-type);
 }
 
-.btn-transparent:hover,
-.btn-transparent:focus {
+.transparent:hover,
+.transparent:focus {
   border-color: var(--button-active);
 }
 
-.btn-icon,
-.btn-icon-set {
+.icon,
+.icon-active {
   margin-left: 10px;
   background-color: transparent;
 }
 
-.btn-icon svg {
+.icon svg {
   width: 24px;
   height: 24px;
   fill: transparent;
   stroke: var(--main);
 }
 
-.btn-icon-set svg {
+.icon-active svg {
   width: 24px;
   height: 24px;
   fill: var(--button-active);
   stroke: var(--button-active);
+}
+
+.underscore {
+  position: relative;
+  background-color: transparent;
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 1.2;
+  color: var(--main);
+}
+
+.underscore-active::after {
+  content: "";
+  position: absolute;
+  bottom: -27px;
+  left: 0;
+  width: 100%;
+  height: 5px;
+  background-color: var(--button-active);
 }
