--- a/src/components/input/Input.module.css
+++ b/src/components/input/Input.module.css
@@ -42,3 +42,10 @@
   line-height: 24px;
   color: var(--label);
 }
+
+.warning {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 24px;
+  color: var(--button);
+}
