--- a/src/css/common.css
+++ b/src/css/common.css
@@ -3,3 +3,9 @@
   margin-right: auto;
   margin-left: auto;
 }
+
+::-webkit-calendar-picker-indicator {
+  width: 20px;
+  height: 20px;
+  cursor: pointer;
+}
