--- a/src/components/Input/Input.module.css
+++ b/src/components/Input/Input.module.css
@@ -22,6 +22,10 @@
   position: relative;
 }
 
+.input-field-container > div {
+  width: 100%;
+}
+
 .input-container svg {
   stroke: var(--main);
   width: 18px;
